background overflow fix

--- a/src/css/02-elements/block.css
+++ b/src/css/02-elements/block.css
@@ -15,7 +15,7 @@ body {
   &::before {
     content: '';
     position: absolute;
-    inline-size: 100vw;
+    inline-size: 100%;
     block-size: 100%;
     inset-block-start: 0;
     inset-inline-start: 0;
